Updated composers psr/log to include 2.0

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "laminas/laminas-xml": "^1.0",
         "guzzlehttp/guzzle": "^6.0|^7.0",
         "kevinrob/guzzle-cache-middleware": "^2.1",
-        "psr/log": "^1.0"
+        "psr/log": "^1.0|^2.0"
     },
     "require-dev" : {
         "phpdocumentor/reflection-docblock": "2.0.4",
